openapi docs + fixing auth services
